1. Added main functionality for teams